# I18nVault

./: .clang-format  .gitignore  CMakeLists.txt  COMPLETE_IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  QUICK_START.md  README.md
.github/workflows/: ci.yml  enhanced_i18n_ci.yml
docs/: CMAKE_AUTOMATION_COMPLETE.md  CMAKE_INTEGRATION.md  CMAKE_QUICK_START.md  COMPILE_TIME_I18N.md  DIFF_CI_QUICK_START.md  DIFF_CI_TRS_GUIDE.md  QUICK_REFERENCE.md  README.zh_CN.md
examples/: compile_time_i18n_example.cpp
i18n/: en_US.json  zh_CN.json
src/: CMakeLists.txt  i18n_demo.cpp  i18n_manager.cpp  i18n_manager.h
src/crypto/: CMakeLists.txt  gcm.c  gcm.h  sm4.c  sm4.h  sm4_gcm.c  sm4_gcm.h
test/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  download_nlohmann.py  encrypt_i18n.c  gen_i18n_keys.py  gen_i18n_keys_constexpr.py  i18n_diff_check.py  i18n_diff_check_enhanced.py  trs_safety_manager.py
